Refactor Ripper for readability

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -12,5 +12,8 @@ AllCops:
 Style/StringLiterals:
   EnforcedStyle: double_quotes
 
+Style/IfUnlessModifier:
+  Enabled: false
+
 Style/StringLiteralsInInterpolation:
   EnforcedStyle: double_quotes
