Update gitignore samples directive

--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,5 @@
 /tmp/
 .idea/
 .rubocop-*rubocop-yml
-samples # use this dir to keep sensitive code files that we want to test on
+# use this dir to keep sensitive code files that we want to test on
+./samples/**/*
