--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,6 @@
 name: Ruby
 
+
 on:
   push:
     branches:
@@ -9,6 +10,9 @@ on:
 
 jobs:
   build:
+    permissions:
+      contents: read-all
+
     runs-on: ubuntu-latest
     name: Ruby ${{ matrix.ruby }}
     strategy:
