--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   build:
     permissions:
-      contents: read-all
+      contents: read
 
     runs-on: ubuntu-latest
     name: Ruby ${{ matrix.ruby }}
